# meme-overlay

./: .gitignore  Makefile  README.md  README_EN.md  overlay.html  package-lock.json  package.json  settings.html  vite.config.ts  windows-example-1.webm
.github/workflows/: ci.yml  release.yml
scripts/: make-server-dmg.sh  postinstall.cjs  run.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmark.rs  commands.rs  main.rs  server_main.rs  stdin_reader.rs
src/animations/: default.json
src/components/: PathCanvas.tsx
src/i18n/: index.tsx
src/styles/: overlay.css  settings.css
src/utils/: pathOptimizer.ts
src/windows/overlay/: AnimationPlayer.tsx  Overlay.tsx  OverlayApp.tsx  ProgressText.tsx  main.tsx
src/windows/settings/: AnimationCard.tsx  AnimationList.tsx  AnimationPreview.tsx  BatchActionBar.tsx  HookConfig.tsx  OnlineLibrary.tsx  PhaseAssign.tsx  RenameModal.tsx  SettingsApp.tsx  main.tsx
