[package]
name = "meme-overlay"
version = "0.1.0"
edition = "2021"

# Main Tauri app — client binary (overlay / stdin mode by default).
[[bin]]
name = "meme-overlay"
path = "src/main.rs"

# Thin launcher for Windows: double-clicking this opens the settings UI
# by delegating to the real binary with --mode server.
# On macOS the same effect is achieved via the .app launcher shell script.
[[bin]]
name = "meme-overlay-server"
path = "src/server_main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
core-foundation = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
